--- a/Tlias/tlias-web-management/pom.xml
+++ b/Tlias/tlias-web-management/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.2.19</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.4.7</version>
+        </dependency>
     </dependencies>
 
     <build>
